Removed file and updated README

--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,14 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
+*.tsbuildinfo
 .env
 .env.*
 !.env.example
 *.local
 
 # Editor directories and files
+.idea/
 .vscode/*
 !.vscode/extensions.json
 !.vscode/settings.json
