--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --port 3000",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --port 3000",
+    "prod": "npm run build && npm run preview"
   },
   "dependencies": {
     "axios": "^1.6.8",
